// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DockIconStrip — snapshots should match snapshot when collapsed overrides active windows 1`] = `
<div
  aria-label="Dock panel tabs"
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-50 shadow-xl"
  role="toolbar"
>
  <div
    class="flex flex-col items-center gap-1.5"
  >
    <button
      aria-label="Layers"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Layers"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Element Properties"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Element Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-vertical w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8h4"
        />
        <path
          d="M12 21v-9"
        />
        <path
          d="M12 8V3"
        />
        <path
          d="M17 16h4"
        />
        <path
          d="M19 12V3"
        />
        <path
          d="M19 21v-5"
        />
        <path
          d="M3 14h4"
        />
        <path
          d="M5 10V3"
        />
        <path
          d="M5 21v-7"
        />
      </svg>
    </button>
    <button
      aria-label="Rack Properties"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Rack Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
    <button
      aria-label="Compliance"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Compliance"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
    </button>
    <button
      aria-label="Blueprint Library"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Blueprint Library"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-zap w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
        />
      </svg>
    </button>
    <button
      aria-label="Information"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Information"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="History"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="History"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-history w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
        <path
          d="M12 7v5l4 2"
        />
      </svg>
    </button>
    <button
      aria-label="Terminal Logs"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Terminal Logs"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-terminal w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19h8"
        />
        <path
          d="m4 17 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DockIconStrip — snapshots should match snapshot with all windows inactive 1`] = `
<div
  aria-label="Dock panel tabs"
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-50 shadow-xl"
  role="toolbar"
>
  <div
    class="flex flex-col items-center gap-1.5"
  >
    <button
      aria-label="Layers"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Layers"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Element Properties"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Element Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-vertical w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8h4"
        />
        <path
          d="M12 21v-9"
        />
        <path
          d="M12 8V3"
        />
        <path
          d="M17 16h4"
        />
        <path
          d="M19 12V3"
        />
        <path
          d="M19 21v-5"
        />
        <path
          d="M3 14h4"
        />
        <path
          d="M5 10V3"
        />
        <path
          d="M5 21v-7"
        />
      </svg>
    </button>
    <button
      aria-label="Rack Properties"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Rack Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
    <button
      aria-label="Compliance"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Compliance"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
    </button>
    <button
      aria-label="Blueprint Library"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Blueprint Library"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-zap w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
        />
      </svg>
    </button>
    <button
      aria-label="Information"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Information"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="History"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="History"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-history w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
        <path
          d="M12 7v5l4 2"
        />
      </svg>
    </button>
    <button
      aria-label="Terminal Logs"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Terminal Logs"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-terminal w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19h8"
        />
        <path
          d="m4 17 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DockIconStrip — snapshots should match snapshot with some windows active 1`] = `
<div
  aria-label="Dock panel tabs"
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-50 shadow-xl"
  role="toolbar"
>
  <div
    class="flex flex-col items-center gap-1.5"
  >
    <button
      aria-label="Layers"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Layers"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Element Properties"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Element Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-vertical w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8h4"
        />
        <path
          d="M12 21v-9"
        />
        <path
          d="M12 8V3"
        />
        <path
          d="M17 16h4"
        />
        <path
          d="M19 12V3"
        />
        <path
          d="M19 21v-5"
        />
        <path
          d="M3 14h4"
        />
        <path
          d="M5 10V3"
        />
        <path
          d="M5 21v-7"
        />
      </svg>
    </button>
    <button
      aria-label="Rack Properties"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Rack Properties"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
    <button
      aria-label="Compliance"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Compliance"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
    </button>
    <button
      aria-label="Blueprint Library"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Blueprint Library"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-zap w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
        />
      </svg>
    </button>
    <button
      aria-label="Information"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Information"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="History"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="History"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-history w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
        <path
          d="M12 7v5l4 2"
        />
      </svg>
    </button>
    <button
      aria-label="Terminal Logs"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Terminal Logs"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-terminal w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19h8"
        />
        <path
          d="m4 17 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
